Fixed a small alignment issue

--- a/css/checkout_success.css
+++ b/css/checkout_success.css
@@ -5,7 +5,7 @@
 /* ------------ Order Confirmation ------------ */
 
 .order-confirmation {
-  max-width: 550px;
+  max-width: 570px;
   margin-inline: auto;
   gap: 25px;
   display: flex;
@@ -22,6 +22,6 @@
 }
 
 .order-confirmation h1 {
-  font-size: 2rem;
+  font-size: 2.1rem;
   text-transform: none;
 }
